# vanta-core

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  pyproject.toml
cmake/: configure-presets.json
docs/bindings/python/source/: api.md  conf.py  index.md  ode.md
examples/bindings/python/mass_spring_damper/: mass_spring_damper.ipynb
examples/core/block_simulation/: CMakeLists.txt  block_simulation.cpp
examples/core/cuda_sum/: CMakeLists.txt  cuda_sum.cpp
examples/core/linear_solve/: CMakeLists.txt  linear_solve.cpp
examples/core/mass_spring_damper/: CMakeLists.txt  mass_spring_damper.cpp
examples/core/optimisation/: CMakeLists.txt  optimisation.cpp
examples/core/root_finding/: CMakeLists.txt  root_finding.cpp
examples/core/simulation_system/: CMakeLists.txt  simulation_system.cpp
examples/cuda_sum/: CMakeLists.txt  cuda_sum.cpp
include/bindings/python/ode/: euler_backward_bindings.h  euler_backward_bindings.hpp  euler_forward_bindings.h  euler_forward_bindings.hpp  runge_kutta_4_bindings.h  runge_kutta_4_bindings.hpp  solution_bindings.h  solution_bindings.hpp
include/core/cuda/: sum.h
include/core/finite_difference/: forward_difference.h  forward_difference.hpp
include/core/linear_solvers/: gaussian_elimination.h  gaussian_elimination.hpp
include/core/ode/: euler_backward.h  euler_backward.hpp  euler_forward.h  euler_forward.hpp  runge_kutta_4.h  runge_kutta_4.hpp  solution.h  solution.hpp
include/core/optimisers/: genetic_algorithm.hpp  gradient_descent.hpp  particle_swarm.hpp  solution.hpp
include/core/root_finders/: newton_raphson.h  newton_raphson.hpp
include/core/simulation/blocks/: block.hpp  constant.hpp  integrator.h  logger.hpp  terminator.hpp
include/core/simulation/core/: port.hpp  signal.hpp  simulator.h  system.hpp
include/core/simulation/ode/: euler_forward.h  integration_scheme.h
include/core/simulation/system/: port.hpp  system.hpp
include/core/utils/: math.h  math.hpp  output.h  output.hpp  random.hpp
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt
src/bindings/python/: CMakeLists.txt  bindings.cpp
src/bindings/python/ode/: euler_backward_bindings.cpp  euler_forward_bindings.cpp  runge_kutta_4_bindings.cpp  solution_bindings.cpp
src/core/: CMakeLists.txt
src/core/cuda/: sum.cu
src/core/finite_difference/: forward_difference.cpp
src/core/linear_solvers/: gaussian_elimination.cpp
src/core/ode/: euler_backward.cpp  euler_forward.cpp  runge_kutta_4.cpp
src/core/optimisers/: genetic_algorithm.cpp  gradient_descent.cpp  particle_swarm.cpp
src/core/root_finders/: newton_raphson.cpp
src/core/simulation/blocks/: integrator.cpp
src/core/simulation/ode/: euler_forward.cpp
src/core/simulation/system/: simulator.cpp  system.cpp
src/core/utils/: math.cpp  output.cpp  random.cpp
src/cuda/: sum.cu
tests/bindings/python/ode/: euler_backward_test.py  euler_forward_test.py  runge_kutta_4_test.py  solution_test.py
tests/core/cuda/: CMakeLists.txt  sum_test.cpp
tests/core/finite_difference/: CMakeLists.txt  forward_difference_test.cpp
tests/core/linear_solvers/: CMakeLists.txt  gaussian_elimination_test.cpp
tests/core/ode/: CMakeLists.txt  euler_backward_test.cpp  euler_forward_test.cpp  runge_kutta_4_test.cpp
tests/core/optimisers/: CMakeLists.txt  genetic_algorithm_test.cpp  gradient_descent_test.cpp  particle_swarm_test.cpp
tests/core/root_finders/: CMakeLists.txt  newton_raphson_test.cpp
tests/core/utils/: CMakeLists.txt  math_test.cpp  output_test.cpp  random_test.cpp
tests/cuda/: CMakeLists.txt
