[project]
name = "vanta-core-py"
version = "0.1.0"
description = "Vanta Core Python bindings"
authors = [
    {name = "Alex Henderson"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">= 3.12"
dependencies = [
    "numpy>=2.4.3"
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "ipython>=9.11.0",
    "matplotlib>=3.10.8",
    "myst-parser>=5.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "sphinx>=9.1.0",
    "sphinx-design>=0.7.0",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.pytest]
testpaths = ["tests/bindings/python"]

[build-system]
requires = [
    "scikit-build-core",
    "pybind11",
    "pybind11-stubgen",
    "numpy"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
build.verbose = true
wheel.packages = ["vanta_core_py"]

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.args = [
    "--preset", "windows-x64-msvc-release",
    "-A", "",
    "-DPYTHON_BINDINGS=ON",
    "-DBUILD_DOCS=OFF",
    "-DBUILD_EXAMPLES=OFF",
    "-DBUILD_TESTS=OFF"
]

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
cmake.args = [
    "--preset", "linux-x64-gcc-release",
    "-DPYTHON_BINDINGS=ON",
    "-DBUILD_DOCS=OFF",
    "-DBUILD_EXAMPLES=OFF",
    "-DBUILD_TESTS=OFF"
]

[[tool.scikit-build.overrides]]
if.platform-system = "darwin"
cmake.args = [
    "--preset", "macos-x64-clang-release",
    "-DPYTHON_BINDINGS=ON",
    "-DBUILD_DOCS=OFF",
    "-DBUILD_EXAMPLES=OFF",
    "-DBUILD_TESTS=OFF"
]
